20050607
 - (dtucker) [configure.ac] Continue the hunt for LLONG_MIN and LLONG_MAX:
   in today's episode we attempt to coax it from limits.h where it may be
   hiding, failing that we take the DIY approach.  Tested by tim@

20050603
 - (dtucker) [configure.ac] Only try gcc -std=gnu99 if LLONG_MAX isn't
   defined, and check that it helps before keeping it in CFLAGS.  Some old
   gcc's don't set an error code when encountering an unknown value in -std.
   Found and tested by tim@.
 - (dtucker) [configure.ac] Point configure's reporting address at the
   openssh-unix-dev list.  ok tim@ djm@

20050602
 - (tim) [configure.ac] Some platforms need sys/types.h for arpa/nameser.h.
   Take AC_CHECK_HEADERS test out of ultrix section. It caused other platforms
   to skip builtin standard includes tests. (first AC_CHECK_HEADERS test
   must be run on all platforms) Add missing ;; to case statement. OK dtucker@

20050601
 - (dtucker) [configure.ac] Look for _getshort and _getlong in
   arpa/nameser.h.
 - (dtucker) [configure.ac openbsd-compat/Makefile.in openbsd-compat/strtoll.c]
   Add strtoll to the compat library, from OpenBSD.
 - (dtucker) OpenBSD CVS Sync
   - avsm@cvs.openbsd.org 2005/05/26 02:08:05
     [scp.c]
     If copying multiple files to a target file (which normally fails, as it
     must be a target directory), kill the spawned ssh child before exiting.
     This stops it trying to authenticate and spewing lots of output.
     deraadt@ ok
   - dtucker@cvs.openbsd.org 2005/05/26 09:08:12
     [ssh-keygen.c]
     uint32_t -> u_int32_t for consistency; ok djm@
   - djm@cvs.openbsd.org 2005/05/27 08:30:37
     [ssh.c]
     fix -O for cases where no ControlPath has been specified or socket at
     ControlPath is not contactable; spotted by and ok avsm@
 - (tim) [config.guess config.sub] Update to '2005-05-27' version.
 - (tim) [configure.ac] set TEST_SHELL for OpenServer 6

20050531
 - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at