@@ -1,3 +1,9 @@
+20050609
+ - (dtucker) [cipher.c openbsd-compat/Makefile.in
+   openbsd-compat/openbsd-compat.{c,h} openbsd-compat/openssl-compat.h]
+   Move compatibility code for supporting older OpenSSL versions to the
+   compat layer.  Suggested by and "no objection" djm@
+
 20050607
  - (dtucker) [configure.ac] Continue the hunt for LLONG_MIN and LLONG_MAX:
    in today's episode we attempt to coax it from limits.h where it may be
@@ -2686,4 +2692,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3813 2005/06/07 07:53:40 dtucker Exp $
+$Id: ChangeLog,v 1.3814 2005/06/09 11:45:10 dtucker Exp $
